--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="text">
     <div class="content">
 
-      <h2>TAKE:)CURE</h2>
-      <h2>TAKE:)CURE</h2>
+      <h2>TAKE:)CARE</h2>
+      <h2>TAKE:)CARE</h2>
 
     </div>
   </div>
